--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,1 +1,34 @@
-<p>login works!</p>
+<div class="row">
+  <div class="col text-center">
+    <div class="container">
+      <h1>Login</h1>
+      <div class="row">
+        <form (ngSubmit)="sendFormulario()" [formGroup]="miformulario" autocomplete="false">
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label"
+              >Email</label
+            >
+            <input
+              type="email"
+              class="form-control"
+              placeholder="user email"
+              formControlName="email"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label"
+              >Password</label
+            >
+            <input
+              type="password"
+              class="form-control"
+              placeholder="user password"
+              formControlName="password"
+            />
+          </div>
+          <button class="btn btn-primary">Entrar</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
