--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,9 +1,11 @@
+
+
 <div class="row">
   <div class="col text-center">
     <div class="container">
       <h1>Login</h1>
       <div class="row">
-        <form (ngSubmit)="sendFormulario()" [formGroup]="miformulario" autocomplete="false">
+        <form (ngSubmit)="sendFormulario()" [formGroup]="miformulario" autocomplete="off">
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label"
               >Email</label
